--- a/estilo.css
+++ b/estilo.css
@@ -90,10 +90,10 @@ footer .social{
 	width: 30px;
 	height: 30px;
 	cursor: pointer;
-	background-image: url("../img/facebook.png");
+	background-image: url("https://i.imgur.com/IdPB1EU.png");
 }
 .facebook:hover{
-	background-image: url("../img/facebook-hover.png");
+	background-image: url("https://i.imgur.com/ajEI2CK.png");
 }
 .youtube{
 	width: 30px;
